aspect ratio/cropping on press with mobile devices fix

--- a/css/sia.css
+++ b/css/sia.css
@@ -145,5 +145,6 @@ body {
 	text-align:center;
 }
 .big-image img{
-	height:100%;
+	max-width:100%;
+	max-height:100%;
 }
